--- a/start.html
+++ b/start.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documentedgit</title>
 </head>
 <body>
     <h1>My third file is not index.html file</h1>
+    <div>
+        <h3>new vlog</h3>
+        <h5>look mama i can write a blog</h5>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis a animi suscipit quod aliquid dolores impedit est nesciunt sit iure aperiam consectetur inventore recusandae, assumenda, consequatur culpa dolore sed officiis tempore veniam explicabo nostrum dolorum. Officiis alias officia eveniet repellendus!</p>
+    </div>
 </body>
 </html>
